# internal/handler/publicuser/register_by_sms_handler.go
@@ -1,28 +1,0 @@
-package publicuser
-
-import (
-	"net/http"
-
-	"github.com/colinrs/protohub/internal/logic/publicuser"
-	"github.com/colinrs/protohub/internal/svc"
-	"github.com/colinrs/protohub/internal/types"
-	"github.com/zeromicro/go-zero/rest/httpx"
-)
-
-func RegisterBySmsHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.RegisterBySmsRequest
-		if err := httpx.Parse(r, &req); err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-			return
-		}
-
-		l := publicuser.NewRegisterBySmsLogic(r.Context(), svcCtx)
-		err := l.RegisterBySms(&req)
-		if err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-		} else {
-			httpx.Ok(w)
-		}
-	}
-}
