# internal/handler/publicuser/reset_password_by_email_handler.go
@@ -1,28 +1,0 @@
-package publicuser
-
-import (
-	"net/http"
-
-	"github.com/colinrs/protohub/internal/logic/publicuser"
-	"github.com/colinrs/protohub/internal/svc"
-	"github.com/colinrs/protohub/internal/types"
-	"github.com/zeromicro/go-zero/rest/httpx"
-)
-
-func ResetPasswordByEmailHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.ResetPasswordByEmailRequest
-		if err := httpx.Parse(r, &req); err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-			return
-		}
-
-		l := publicuser.NewResetPasswordByEmailLogic(r.Context(), svcCtx)
-		err := l.ResetPasswordByEmail(&req)
-		if err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-		} else {
-			httpx.Ok(w)
-		}
-	}
-}
