# internal/handler/publicuser/reset_password_by_sms_handler.go
@@ -1,28 +1,0 @@
-package publicuser
-
-import (
-	"net/http"
-
-	"github.com/colinrs/protohub/internal/logic/publicuser"
-	"github.com/colinrs/protohub/internal/svc"
-	"github.com/colinrs/protohub/internal/types"
-	"github.com/zeromicro/go-zero/rest/httpx"
-)
-
-func ResetPasswordBySmsHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.ResetPasswordBySmsRequest
-		if err := httpx.Parse(r, &req); err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-			return
-		}
-
-		l := publicuser.NewResetPasswordBySmsLogic(r.Context(), svcCtx)
-		err := l.ResetPasswordBySms(&req)
-		if err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-		} else {
-			httpx.Ok(w)
-		}
-	}
-}
