# internal/handler/user/get_user_info_handler.go
@@ -1,21 +1,0 @@
-package user
-
-import (
-	"net/http"
-
-	"github.com/colinrs/protohub/internal/logic/user"
-	"github.com/colinrs/protohub/internal/svc"
-	"github.com/zeromicro/go-zero/rest/httpx"
-)
-
-func GetUserInfoHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		l := user.NewGetUserInfoLogic(r.Context(), svcCtx)
-		resp, err := l.GetUserInfo()
-		if err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-		} else {
-			httpx.OkJsonCtx(r.Context(), w, resp)
-		}
-	}
-}
