# internal/handler/user/login_by_email_handler.go
@@ -1,24 +1,24 @@
-package publicuser
+package user
 
 import (
 	"net/http"
 
-	"github.com/colinrs/protohub/internal/logic/publicuser"
+	"github.com/colinrs/protohub/internal/logic/user"
 	"github.com/colinrs/protohub/internal/svc"
 	"github.com/colinrs/protohub/internal/types"
 	"github.com/zeromicro/go-zero/rest/httpx"
 )
 
-func LoginHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+func LoginByEmailHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.LoginRequest
+		var req types.LoginByEmailRequest
 		if err := httpx.Parse(r, &req); err != nil {
 			httpx.ErrorCtx(r.Context(), w, err)
 			return
 		}
 
-		l := publicuser.NewLoginLogic(r.Context(), svcCtx)
-		resp, err := l.Login(&req)
+		l := user.NewLoginByEmailLogic(r.Context(), svcCtx)
+		resp, err := l.LoginByEmail(&req)
 		if err != nil {
 			httpx.ErrorCtx(r.Context(), w, err)
 		} else {
