# internal/handler/user/reset_password_by_email_handler.go
@@ -1,28 +1,28 @@
-package publicuser
+package user
 
 import (
 	"net/http"
 
-	"github.com/colinrs/protohub/internal/logic/publicuser"
+	"github.com/colinrs/protohub/internal/logic/user"
 	"github.com/colinrs/protohub/internal/svc"
 	"github.com/colinrs/protohub/internal/types"
 	"github.com/zeromicro/go-zero/rest/httpx"
 )
 
-func LoginByEmailHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+func ResetPasswordByEmailHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.LoginByEmailRequest
+		var req types.ResetPasswordByEmailRequest
 		if err := httpx.Parse(r, &req); err != nil {
 			httpx.ErrorCtx(r.Context(), w, err)
 			return
 		}
 
-		l := publicuser.NewLoginByEmailLogic(r.Context(), svcCtx)
-		resp, err := l.LoginByEmail(&req)
+		l := user.NewResetPasswordByEmailLogic(r.Context(), svcCtx)
+		err := l.ResetPasswordByEmail(&req)
 		if err != nil {
 			httpx.ErrorCtx(r.Context(), w, err)
 		} else {
-			httpx.OkJsonCtx(r.Context(), w, resp)
+			httpx.Ok(w)
 		}
 	}
 }
